# mailview

./: CHANGELOG.md  LICENSE  Makefile  README.md  RELEASES.md  codecov.yml  pyproject.toml  test_app.py
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  release.yml
examples/: fastapi_app.py
examples/fastapi_app/: README.md  app.py  requirements.txt
mailview/: __init__.py  backend.py  env.py  middleware.py  models.py  paths.py  router.py  store.py
mailview/ui/: index.html
tests/: test_backend.py  test_env.py  test_integration.py  test_mailview.py  test_middleware.py  test_models.py  test_paths.py  test_router.py  test_store.py
tests/performance/: __init__.py  conftest.py  helpers.py  test_api.py  test_middleware.py  test_store.py
